--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,51 @@ body {
 
 }
 
-main {
+#social {
+    > div {
+        display: block;
+        width: 240px;
+        margin: auto;
+        margin-top: 360px;
+        position: relative;
+        > a {
+            position: absolute;
+            bottom: calc(sin(var(--position) * pi / 5) * 120%);
+            left: calc(50% - cos(var(--position) * pi / 5) * 120%);
+            height: 30%;
+            width: 30%;
+            transform: translate(-50%, -50%);
+            transition: transform .2s;
+            &:hover {
+                transform: translate(-50%, -50%) scale(1.25);
+            }
+            & img {
+                height: 100%;
+                width: 100%;
+            }
+        }
+        > a:nth-child(2) {
+            --position: 0;
+        }
+        > a:nth-child(3) {
+            --position: 1;
+        }
+        > a:nth-child(4) {
+            --position: 2;
+        }
+        > a:nth-child(5) {
+            --position: 3;
+        }
+        > a:nth-child(6) {
+            --position: 4;
+        }
+        > a:nth-child(7) {
+            --position: 5;
+        }
+    }
+}
+
+#services {
     display: block;
     width: 50%;
     margin: 3rem auto;
@@ -56,7 +100,7 @@ main {
         background: #0d1117;
     }
 
-    & .services {
+    > div {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
@@ -87,12 +131,12 @@ main {
 }
 
 @media only screen and (max-width: 600px) {
-    main {
+    #services {
         width: 90%;
         & p {
             width: 100%;
         }
-        & .services {
+        > div {
             & a {
                 width: 128px;
                 margin: 10px;
